[gd_scene load_steps=2 format=3 uid="uid://l1gm7dlaqsw4"]

[ext_resource type="Script" path="res://scripts/Day12Controller.gd" id="1_adtx5"]

[node name="Day12" type="Node2D"]
script = ExtResource("1_adtx5")

[node name="Puzzle1Button" type="Button" parent="."]
offset_top = 40.0
offset_right = 71.0
offset_bottom = 71.0
text = "Puzzle 1"

[node name="Puzzle2Button" type="Button" parent="."]
offset_top = 80.0
offset_right = 71.0
offset_bottom = 111.0
text = "Puzzle 2"

[node name="Puzzle1Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 63.0

[node name="Puzzle2Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 103.0

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="UI" type="CanvasLayer" parent="."]

[connection signal="pressed" from="Puzzle1Button" to="." method="_on_puzzle_1_button_pressed"]
[connection signal="pressed" from="Puzzle2Button" to="." method="_on_puzzle_2_button_pressed"]
